# coerce-data

./: changelog.md  coerce-data.cabal  readme.md
.github/workflows/: ci.yml
src/CoerceData/: Plugin.hs
test/: Framework.hs  Main.hs  Tests.hs
